fixed jre issue with javafx